--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -9,6 +9,10 @@
 				<div class="form-group"><input class="form-control" type="number" name="price" placeholder="price" min="0.1" step="0.1"></div>
 				<div class="form-group"><input class="form-control" type="text" name="image" placeholder="img url"></div>				 
 				<div class="form-group"><input class="form-control" type="text" name="description" placeholder="description"></div>
+				<div class="form-group">
+    			<label for="location">Location</label>
+    			<input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA">
+</div>
 				<div class="form-group"><button class="btn btn-lg btn-primary btn-block">Submit!</button></div>								
 		</form>
 			<a href="/campgrounds">Go Back</a>
